# sfx-maya-tools

./: README  README.md
dev/plugin-templates/helloMayaTemplate/: .gitignore  AUTHORS  ChangeLog  NEWS  README  common.mk  configure.ac
dev/plugin-templates/helloMayaTemplate/src/: Makefile.am  helloMaya.cpp  helloMaya.mel  helloMaya.py
